	- Unbound exits with a fatal error when the auto-trust-anchor-file
	  fails to be writable.  This is seconds after startup.  You can
	  load a readonly auto-trust-anchor-file with trust-anchor-file.
	  The file has to be writable to notice the trust anchor change,
	  without it, a trust anchor change will be unnoticed and the system
	  will then become inoperable.

2 April 2015: Wouter
	- Fix #660: Fix interface-automatic broken in the presence of
	  asymmetric routing.

26 March 2015: Wouter
	- remote.c probedelay line is easier to read.
	- rename ldns subdirectory to sldns to avoid name collision.

25 March 2015: Wouter
	- Fix #657:  libunbound(3) recommends deprecated
	  CRYPTO_set_id_callback.
	- If unknown trust anchor algorithm, and libressl is used, error
	  message encourages upgrade of the libressl package.

23 March 2015: Wouter
	- Fix segfault on user not found at startup (from Maciej Soltysiak).

20 March 2015: Wouter
	- Fixed to add integer overflow checks on allocation (defense in depth).

19 March 2015: Wouter
	- Add ip-transparent config option for bind to non-local addresses.

17 March 2015: Wouter
	- Use reallocarray for integer overflow protection, patch submitted
	  by Loganaden Velvindron.

16 March 2015: Wouter
	- Fixup compile on cygwin, more portable openssl thread id.

12 March 2015: Wouter
	- Updated default keylength in unbound-control-setup to 3k.

10 March 2015: Wouter
	- Fix lintian warning in unbound-checkconf man page (from Andreas
	  Schulze).
	- print svnroot when building windows dist.
	- iana portlist update.
	- Fix warning on sign compare in getentropy_linux.

9 March 2015: Wouter
	- Fix #644: harden-algo-downgrade option, if turned off, fixes the
	  reported excessive validation failure when multiple algorithms
	  are present.  It allows the weakest algorithm to validate the zone.
	- iana portlist update.

5 March 2015: Wouter
	- contrib/unbound_smf22.tar.gz: Solaris SMF installation/removal